@@ -1,10 +1,0 @@
-<configure
-  xmlns="http://namespaces.zope.org/zope">
-
-  <utility
-    factory='.tests.base.DummyGeoCoder'
-    provides="collective.geo.geographer.interfaces.IGeoCoder"
-  />
-
-</configure>
-
